// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`layout snapshots dashboard view at 140x40 1`] = `
"devagent-ts v0.1.0  │ Mission: add authentication                                                   MODE: CODE   MODEL: qwen3:30b   10:42:11
╭────────────────────────────╮ ╭────────────────────────────────────────────────────────────────────────────╮ ╭────────────────────────────╮
│MISSION                     │ │ACTIVITY FEED                                                               │ │CONTEXT                     │
│add authentication          │ │10:42:11 Execute > Add Devise gem                                    Pending│ │📁 Workspace   ollama-agent │
│ ✓ Understand               │ │  +1 -0                                                                     │ │⎇ Branch               main │
│ ✓ Inspect                  │ │    +gem 'devise'                                                           │ │◆ Language       TypeScript │
│ ✓ Plan                     │ │                                                                            │ │⚙ Framework           React │
│ ▶ Execute            0m 00s│ │10:42:11 Assistant                                                     Reply│ │✓ Tests                Jest │
│ ○ Validate                 │ │  • Analyzing project structure and existing patterns...                    │ │🕐 Updated         10:42:11 │
│ ○ Repair                   │ │      • Reading package.json                                                │ ╰────────────────────────────╯
│ ○ Review                   │ │      • Found TypeScript project                                            │
│ ○ Complete                 │ │    ↳ local/qwen3:30b                                                       │ ╭────────────────────────────╮
│   ── ✓ Create User model   │ │                                                                            │ │FILES (2 CHANGED)           │
│   ── ▶ Add Devise gem      │ │10:42:11 You                                                             You│ │M src/tools/fs.ts           │
╰────────────────────────────╯ │  > create filesystem tool                                                  │ │A src/tools/index.ts        │
                               │                                                                            │ │                            │
╭────────────────────────────╮ │                                                                            │ │                            │
│TOOLS                       │ │                                                                            │ │                            │
│▶ edit_file              (1)│ │                                                                            │ │                            │
│View all tools... (/tools)  │ │                                                                            │ │                            │
│                            │ │                                                                            │ │                            │
│                            │ │                                                                            │ │                            │
│                            │ │                                                                            │ │                            │
│                            │ ╰────────────────────────────────────────────────────────────────────────────╯ │                            │
│                            │                                                                                │                            │
│                            │ ╭────────────────────────────────────────────────────────────────────────────╮ │                            │
│                            │ │DIFF PREVIEW                                                                │ │                            │
│                            │ │Gemfile                                                               +1 -0 │ ╰────────────────────────────╯
│                            │ │+gem 'devise'                                                               │
│                            │ │                                                                         1/1│ ╭────────────────────────────╮
│                            │ │                                                                            │ │DIAGNOSTICS                 │
│                            │ │                                                                            │ │Errors                     0│
│                            │ │                                                                            │ │Warnings                   —│
│                            │ │                                                                            │ │Infos                      —│
╰────────────────────────────╯ ╰────────────────────────────────────────────────────────────────────────────╯ ╰────────────────────────────╯
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Chat· │ Plan· │ Exec✓ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Skl· │ LSP· │ Tok48k/71k
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 80x24 1`] = `
"devagent-ts v0.1.0                      MODE: CODE   MODEL: qwen3:30b   10:42:11
Resize to ≥130 cols for the full dashboard.
> create filesystem tool

• Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project
  ↳ local/qwen3:30b











───────────────────────────────────────────────────────────────────────────────
Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Skl· │ LSP·
───────────────────────────────────────────────────────────────────────────────
>
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 100x30 1`] = `
"devagent-ts v0.1.0                                          MODE: CODE   MODEL: qwen3:30b   10:42:11
Resize to ≥130 cols for the full dashboard.
> create filesystem tool

• Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project
  ↳ local/qwen3:30b

















───────────────────────────────────────────────────────────────────────────────────────────────────
Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Skl· │ LSP· │ Tok48k/71k
───────────────────────────────────────────────────────────────────────────────────────────────────
>
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 120x30 1`] = `
"devagent-ts v0.1.0                                                              MODE: CODE   MODEL: qwen3:30b   10:42:11
Resize to ≥130 cols for the full dashboard.
> create filesystem tool

• Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project
  ↳ local/qwen3:30b

















───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Skl· │ LSP· │ Tok48k/71k
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 160x45 1`] = `
"devagent-ts v0.1.0                                                                                                      MODE: CODE   MODEL: qwen3:30b   10:42:11
╭────────────────────────────╮ ╭────────────────────────────────────────────────────────────────────────────────────────────────╮ ╭────────────────────────────╮
│MISSION                     │ │ACTIVITY FEED                                                                                   │ │CONTEXT                     │
│     No active mission      │ │10:42:11 Assistant                                                                         Reply│ │📁 Workspace   ollama-agent │
│Start one with /plan <goal> │ │  • Analyzing project structure and existing patterns...                                        │ │⎇ Branch               main │
╰────────────────────────────╯ │      • Reading package.json                                                                    │ │🕐 Updated         10:42:11 │
                               │      • Found TypeScript project                                                                │ ╰────────────────────────────╯
╭────────────────────────────╮ │    ↳ local/qwen3:30b                                                                           │
│TOOLS                       │ │                                                                                                │ ╭────────────────────────────╮
│▶ edit_file              (1)│ │10:42:11 You                                                                                 You│ │FILES (2 CHANGED)           │
│View all tools... (/tools)  │ │  > create filesystem tool                                                                      │ │M src/tools/fs.ts           │
│                            │ │                                                                                                │ │A src/tools/index.ts        │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ │                            │
│                            │ │                                                                                                │ ╰────────────────────────────╯
│                            │ │                                                                                                │
│                            │ ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ ╭────────────────────────────╮
│                            │                                                                                                    │DIAGNOSTICS                 │
│                            │ ╭────────────────────────────────────────────────────────────────────────────────────────────────╮ │Errors                     0│
│                            │ │DIFF PREVIEW                                                                                    │ │Warnings                   —│
│                            │ │No changes yet                                                                                  │ │Infos                      —│
╰────────────────────────────╯ ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ ╰────────────────────────────╯
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Skl· │ LSP· │ Tok48k/71k
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 220x60 1`] = `
"devagent-ts v0.1.0                                                                                                                                                                  MODE: CODE   MODEL: qwen3:30b   10:42:11
╭────────────────────────────╮ ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮ ╭────────────────────────────╮
│MISSION                     │ │ACTIVITY FEED                                                                                                                                               │ │CONTEXT                     │
│     No active mission      │ │10:42:11 Assistant                                                                                                                                     Reply│ │📁 Workspace   ollama-agent │
│Start one with /plan <goal> │ │  • Analyzing project structure and existing patterns...                                                                                                    │ │⎇ Branch               main │
╰────────────────────────────╯ │      • Reading package.json                                                                                                                                │ │🕐 Updated         10:42:11 │
                               │      • Found TypeScript project                                                                                                                            │ ╰────────────────────────────╯
╭────────────────────────────╮ │    ↳ local/qwen3:30b                                                                                                                                       │
│TOOLS                       │ │                                                                                                                                                            │ ╭────────────────────────────╮
│▶ edit_file              (1)│ │10:42:11 You                                                                                                                                             You│ │FILES (2 CHANGED)           │
│View all tools... (/tools)  │ │  > create filesystem tool                                                                                                                                  │ │M src/tools/fs.ts           │
│                            │ │                                                                                                                                                            │ │A src/tools/index.ts        │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ │                            │
│                            │ │                                                                                                                                                            │ ╰────────────────────────────╯
│                            │ │                                                                                                                                                            │
│                            │ ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ ╭────────────────────────────╮
│                            │                                                                                                                                                                │DIAGNOSTICS                 │
│                            │ ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮ │Errors                     0│
│                            │ │DIFF PREVIEW                                                                                                                                                │ │Warnings                   —│
│                            │ │No changes yet                                                                                                                                              │ │Infos                      —│
╰────────────────────────────╯ ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ ╰────────────────────────────╯
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Skl· │ LSP· │ Tok48k/71k
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m │ Ctrl+P Palette"
`;
